--- a/CORRECTIONS/contact.html
+++ b/CORRECTIONS/contact.html
@@ -50,11 +50,7 @@
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
-							<li>
-							</li>
-							<li>
-								<a href="contact.html">page2 &gt;</a>
-							</li>
+							
 						</ul>
 					</div>
 				</nav>
@@ -148,32 +144,32 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span> Twitter</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span> Facebook</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span> Dribbble</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+											class="fa fa-instagram icon-md"></span>Instagram</a>
 								</div>
 							</div>
+							
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
 		<!-- Footer - bloc-8 END -->
-
 	</div>
 	<!-- Principal conteneur END -->
 
