--- a/CORRECTIONS/index.html
+++ b/CORRECTIONS/index.html
@@ -268,7 +268,7 @@
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage"
-								data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb"
+								data-frame="snapshot-lb"><img src="img/4.jpeg" class="img-responsive portfolio-thumb"
 									alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
