--- a/CORRECTIONS/contact.html
+++ b/CORRECTIONS/contact.html
@@ -84,7 +84,8 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<form id="form_1" novalidate success-msg="Your message has been sent."
-								fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+								fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, pardon pour le désagrément !">
+								
 								<div class="form-group">
 									<label>
 										Nom
