--- a/CORRECTIONS/contact.html
+++ b/CORRECTIONS/contact.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="">
-	<meta name="description" content="">
+	
+	<meta name="description" content="Contacter La Chouette agence, agence de web design à Lyon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -19,7 +19,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-	<title>Contact</title>
+	<title>Contacter La Chouette Agence</title>
 
 
 	<!-- Analytics -->
@@ -83,29 +83,29 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-6">
-							<form id="form_1" novalidate success-msg="Your message has been sent."
+							<form id="form_1" novalidate success-msg="Votre message est bien envoyé ! Nous vous contacterons dans les plus brefs delais."
 								fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, pardon pour le désagrément !">
 								
 								<div class="form-group">
-									<label>
+									<label for="name">
 										Nom
 									</label>
 									<input id="name" class="form-control" required />
 								</div>
 								<div class="form-group">
-									<label>
+									<label for="email">
 										Adresse email
 									</label>
 									<input id="email" class="form-control" type="email" required />
 								</div>
 								<div class="form-group">
-									<label>
+									<label for="input_504">
 										Comment nous avez-vous connu ?
 									</label>
 									<input class="form-control" type="email" required id="input_504" />
 								</div>
 								<div class="form-group">
-									<label>
+									<label for="message">
 										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 									</label><textarea id="message" class="form-control" rows="4" cols="50"
 										required></textarea>
